function create product in gudang, product, change PRP

--- a/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
@@ -147,8 +147,8 @@
                             <td hidden><input type="text" hidden id="VendorId" /></td>
                             <td><select id="namabarang" class="form-control" style="width:160px;"></select></td>
                             <td><select id="namavendor" class="form-control" style="width:160px;"></select></td>
-                            <td><input type="text" class="form-control" placeholder="satuan" id="satuan" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="harga" id="harga" value="" /></td>
+                            <td><input type="text" class="form-control" placeholder="satuan" id="satuan" value="" disabled/></td>
+                            <td><input type="text" class="form-control" placeholder="harga" id="harga" value="" disabled/></td>
                             <td><input type="text" class="form-control" placeholder="stok_prev" id="stok_prev" value="" disabled /></td>
                             <td><input type="text" class="form-control" placeholder="total_req" id="total_req" value="" disabled /></td>
                             <td><input type="text" class="form-control" placeholder="total_dist" id="total_dist" value="" disabled /></td>
@@ -159,8 +159,8 @@
                             <td><input type="text" class="form-control" placeholder="qty_final" id="qty_final" disabled="disabled" /></td>
                             <td><input type="text" class="form-control" placeholder="remark" id="remark" disabled="disabled" /></td>
                             <td><input type="text" class="form-control" placeholder="total" id="total" value="" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="qty_unit" id="qty_unit" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="qty_box" id="qty_box" value="" /></td>
+                            <td><input type="text" class="form-control" placeholder="qty_box" id="qty_box" value="" disabled/></td>
+                            <td><input type="text" class="form-control" placeholder="qty_unit" id="qty_unit" value="" disabled/></td>
                             <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
                         </tr>
                     </tfoot>
