--- a/Klinik.Web/Views/Poli/FormExamine.cshtml
+++ b/Klinik.Web/Views/Poli/FormExamine.cshtml
@@ -126,6 +126,7 @@
                                         <div class="form-group">
                                             <label class="control-label">@Klinik.Resources.UIMessages.Name</label>
                                             <input type="text" class="form-control" readOnly value="@Model.LoketData.PatientName">
+                                            @Html.HiddenFor(x => x.LoketData.PatientID, new { @Id = "hdnPatientId" })
                                         </div>
                                     </div>
                                     <div class="col-sm-12">
@@ -172,6 +173,7 @@
                                     </div>
                                 </div>
                                 <footer class="panel-footer">
+                                    <button class="btn btn-info btn-block" id="btnViewHistory">@Klinik.Resources.UIMessages.ViewHistoryPatient</button>
                                     <button class="btn btn-danger btn-block" onclick="location.href='@Url.Action("PatientList", "Poli")'">@Klinik.Resources.UIMessages.Back</button>
                                 </footer>
                             </section>
@@ -692,8 +694,8 @@
                                                         </div>
                                                         <div class="form-group col-md-8">
                                                             @Html.HiddenFor(x => x.ICDInformation1, new { @id = "ddlicd1" })
-                                                            @Html.TextBoxFor(x=>x.ICDInformation1Desc, new {@class="form-control", @id="icd1" })
-                                                            @*<input type="text" class="form-control" id="icd1" />*@
+                                                            @Html.TextBoxFor(x => x.ICDInformation1Desc, new { @class = "form-control", @id = "icd1" })
+
                                                         </div>
                                                     </div>
 
@@ -704,7 +706,7 @@
                                                         <div class="form-group col-md-8">
                                                             @Html.HiddenFor(x => x.ICDInformation2, new { @id = "ddlicd2" })
                                                             @Html.TextBoxFor(x => x.ICDInformation2Desc, new { @class = "form-control", @id = "icd2" })
-                                                            @*<input type="text" class="form-control" id="icd2" />*@
+
                                                         </div>
                                                     </div>
 
@@ -715,7 +717,7 @@
                                                         <div class="form-group col-md-8">
                                                             @Html.HiddenFor(x => x.ICDInformation3, new { @id = "ddlicd3" })
                                                             @Html.TextBoxFor(x => x.ICDInformation3Desc, new { @class = "form-control", @id = "icd3" })
-                                                            @*<input type="text" class="form-control" id="icd3" />*@
+
                                                         </div>
                                                     </div>
 
@@ -832,7 +834,47 @@
         </section>
     </div>
 
+    <div id="mdlViewHistory" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Patient History</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-horizontal">
+
+                        <div style="width:100%; margin:0 auto">
+                            <table id="tbHistoryMedical" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+                                <thead>
+                                    <tr>
+                                        <th>@Klinik.Resources.UIMessages.ID</th>
+                                        <th>@Klinik.Resources.UIMessages.Name</th>
+                                        <th>@Klinik.Resources.UIMessages.Tanggal</th>
+                                        <th>@Klinik.Resources.UIMessages.ClinicName</th>
+                                        <th>@Klinik.Resources.UIMessages.Poli</th>
+                                        <th>@Klinik.Resources.UIMessages.Doctor</th>
+                                        <th>@Klinik.Resources.UIMessages.Anamnesa</th>
+                                        <th>@Klinik.Resources.UIMessages.Diagnose</th>
+                                        <th>@Klinik.Resources.UIMessages.Theraphy</th>
+                                        <th>@Klinik.Resources.UIMessages.Result</th>
+                                    </tr>
+                                </thead>
+                            </table>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Specific Page Vendor -->
+    <script src="~/Scripts/medica/jquery-1.10.2.js"></script>
 
     <script src="~/Content/Octopus/assets/vendor/jquery-datatables/media/js/jquery.dataTables.js"></script>
     <script src="~/Content/Octopus/assets/vendor/jquery-datatables/extras/TableTools/js/dataTables.tableTools.min.js"></script>
@@ -841,7 +883,7 @@
 
     <!-- Vendor -->
     <script src="~/Content/Octopus/assets/vendor/jquery-browser-mobile/jquery.browser.mobile.js"></script>
-    <script src="~/Content/Octopus/assets/vendor/bootstrap/js/bootstrap.js"></script>
+
     <script src="~/Content/Octopus/assets/vendor/nanoscroller/nanoscroller.js"></script>
     <script src="~/Content/Octopus/assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
     <script src="~/Content/Octopus/assets/vendor/jquery-placeholder/jquery.placeholder.js"></script>
@@ -852,7 +894,8 @@
     <script src="~/Content/Octopus/assets/javascripts/theme.js"></script>
     <script src="~/Content/Octopus/assets/javascripts/theme.custom.js"></script>
     <script src="~/Content/Octopus/assets/javascripts/theme.init.js"></script>
-    <script src="~/Scripts/medica/jquery-1.10.2.js"></script>
+
+    <script src="~/Content/Octopus/assets/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="~/Scripts/medica/jquery-ui.js"></script>
     <script src="~/Content/Octopus/assets/vendor/select2/select2.js"></script>
     <script type="text/javascript" lang="en">
@@ -945,11 +988,101 @@
             return vars;
     }
 
+
+        function bindHistoricalData() {
+            var _patientId = $('#hdnPatientId').val();
+              $('#tbHistoryMedical').dataTable({
+            "autoWidth": false,
+            "processing": true,
+            "serverSide": true,
+            "filter": true,
+            "orderMulti": false,
+            "pageLength": 10,
+            "ajax": {
+                "url": "/Poli/GetHistoryMedicalPatient?idPatient="+_patientId,
+                "type": "POST",
+                "datatype": "json"
+            },
+
+            "columnDefs":
+                [{
+                    "targets": [0],
+                    "visible": false,
+                    "searchable": false
+                   
+                },
+                {
+                    "targets": [1],
+                    "searchable": true,
+                    "orderable": true
+                },
+                {
+                    "targets": [2],
+                    "searchable": false,
+                    "orderable": true
+                    },
+                {
+                    "targets": [3],
+                    "searchable": true,
+                    "orderable": false
+                    },
+                {
+                    "targets": [4],
+                    "searchable": true,
+                    "orderable": false
+                    },
+                {
+                    "targets": [5],
+                    "searchable": true,
+                    "orderable": false
+                    },
+                {
+                    "targets": [6],
+                    "searchable": true,
+                    "orderable": false
+                    },
+                {
+                    "targets": [7],
+                    "searchable": true,
+                    "orderable": false
+                    },
+                {
+                    "targets": [8],
+                    "searchable": true,
+                    "orderable": false
+                    },
+                {
+                    "targets": [9],
+                    "searchable": true,
+                    "orderable": false
+                }
+                ],
+
+            "columns": [
+                { "data": "Id", "name": "Id", "autoWidth": false },
+                { "data": "PatientName", "name": "PatientName", "autoWidth": true },
+                { "data": "Tanggal", "name": "Tanggal", "autoWidth": true },
+                { "data": "ClinicName", "name": "ClinicName", "autoWidth": true },
+                { "data": "PoliName", "name": "PoliName", "autoWidth": true },
+                { "data": "DoctorName", "name": "DoctorName", "autoWidth": true },
+                { "data": "Anamnesa", "name": "Anamnesa", "autoWidth": true },
+                { "data": "Diagnosa", "name": "Diagnosa", "autoWidth": true },
+                { "data": "Therapy", "name": "Therapy", "autoWidth": true },
+                { "data": "Result", "name": "Result", "autoWidth": true },
+                //{ "data": "DoctorName", "name": "DoctorName", "autoWidth": true },
+                @*{
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditGudang?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" }
+                }*@
+
+            ]
+        });
+        }
+
     $(document).ready(function () {
             var _isViewOnly = getUrlVars()["IsViewOnly"];
             var medicine = $("#medicineName");
             if (!medicine.length) return;
-      
+
         $('#ddlcaused').select2();
         $('#ddlcondition').select2();
 
@@ -976,7 +1109,7 @@
                 },
                 select: function (e, i) {
                     $("#ddlicd1").val(i.item.id);
-                   
+
                 },
                 minLength: 4
          });
@@ -986,7 +1119,7 @@
                     $.ajax({
                         url: '/Poli/AutoCompleteICD/',
                         data: "{ 'prefix': '" + request.term + "', 'id1': '" + $('#ddlicd1').val() + "', 'id2': '" + $('#ddlicd3').val() + "'}",
-                        
+
                         dataType: "json",
                         type: "POST",
                         contentType: "application/json; charset=utf-8",
@@ -1005,7 +1138,7 @@
                 },
                 select: function (e, i) {
                     $("#ddlicd2").val(i.item.id);
-                   
+
                 },
                 minLength: 4
             });
@@ -1015,7 +1148,7 @@
                     $.ajax({
                         url: '/Poli/AutoCompleteICD/',
                         data: "{ 'prefix': '" + request.term + "', 'id1': '" + $('#ddlicd1').val() + "', 'id2': '" + $('#ddlicd2').val() + "'}",
-                        
+
                         dataType: "json",
                         type: "POST",
                         contentType: "application/json; charset=utf-8",
@@ -1034,10 +1167,17 @@
                 },
                 select: function (e, i) {
                     $("#ddlicd3").val(i.item.id);
-                   
+
                 },
                 minLength: 4
-            });
+        });
+
+        $('#btnViewHistory').click(function (e) {
+            bindHistoricalData();
+         $('#mdlViewHistory').modal({
+                              'backdrop': 'static'
+                           });
+        });
 
             $("#medicineName").autocomplete({
                 source: function (request, response) {
@@ -1600,8 +1740,6 @@
                     }
                 });
             });
-
-
         });
     </script>
 </body>
