Modif View History Patient for doctor

--- a/Klinik.Web/Views/Poli/FormExamine.cshtml
+++ b/Klinik.Web/Views/Poli/FormExamine.cshtml
@@ -996,7 +996,8 @@
             "processing": true,
             "serverSide": true,
             "filter": true,
-            "orderMulti": false,
+                  "orderMulti": false,
+            "destroy":true,
             "pageLength": 10,
             "ajax": {
                 "url": "/Poli/GetHistoryMedicalPatient?idPatient="+_patientId,
