--- a/Klinik.Web/Views/Reports/Top10Dieases.cshtml
+++ b/Klinik.Web/Views/Reports/Top10Dieases.cshtml
@@ -19,36 +19,49 @@
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PeriodMonthStart</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.MonthStart, (IEnumerable<SelectListItem>)ViewBag.Months, new { @class = "form-control", @id = "ddlMonthStart" })
+                    @Html.ValidationMessageFor(model => model.MonthStart)
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PeriodYearStart</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.YearStart, (IEnumerable<SelectListItem>)ViewBag.Years, new { @class = "form-control", @id = "ddlStartYear" })
+                    @Html.ValidationMessageFor(model => model.YearStart)
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PeriodMonthEnd</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.MonthEnd, (IEnumerable<SelectListItem>)ViewBag.Months, new { @class = "form-control", @id = "ddlMonthStart" })
+                    @Html.ValidationMessageFor(model => model.MonthEnd)
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PeriodYearEnd</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.YearEnd, (IEnumerable<SelectListItem>)ViewBag.Years, new { @class = "form-control", @id = "ddlStartYear" })
+                    @Html.ValidationMessageFor(model => model.YearEnd)
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Clinic</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.ClinicId, (IEnumerable<SelectListItem>)ViewBag.Clinics, new { @class = "form-control", @id = "ddlClinic" })
+                    @Html.ValidationMessageFor(model => model.ClinicId)
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Category</label>
                 <div class="col-md-4">
-                    @Html.DropDownListFor(model => model.SelectedCategory, (IEnumerable<SelectListItem>)ViewBag.Clinics, new { @class = "form-control", @id = "ddlClinic" })
+                    @Html.DropDownListFor(model => model.SelectedCategory, Model.Categories, new { @class = "form-control", @id = "ddlCategory" })
+                    @Html.ValidationMessageFor(model => model.SelectedCategory)
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CategoryItem</label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(model => model.SelectedCategoryItem, Model.CategoryItems, new { @class = "form-control", @id = "ddlCategoryItem" })
+                    @Html.ValidationMessageFor(model => model.SelectedCategoryItem)
                 </div>
             </div>
         </div>
@@ -68,15 +81,6 @@
             $('#ddlMonthEnd').select2();
             $('#ddlYearEnd').select2();
             $('#ddlClinic').select2();
-            $('#ddlDept').select2();
-            $('#ddlBusinessUnit').select2();
-            $('#ddlEmpStatus').select2();
-            $('#ddlFamilyStatus').select2();
-            $('#ddlNecessityType').select2();
-            $('#ddlPaymentType').select2();
-            $('#ddlNeedRest').select2();
-            $('#ddlExamineType').select2();
-
 
             toastr.options = {
                 "closeButton": false,
@@ -87,6 +91,35 @@
                 "timeOut": "2000",
                 "showMethod": "fadeIn"
             };
-        })
+
+            
+            $(function () {
+                $("#ddlCategory").change(function () {
+                        var selectedItem = $(this).val();
+                        var ddlCategoryItems = $("#ddlCategoryItem");
+                        var versionsProgress = $("#states-loading-progress");
+                        versionsProgress.show();
+                        $.ajax({
+                            cache: false,
+                            type: "GET",
+                            url: "@(Url.Action("GetGeneralMasterByType"))",
+                            data: { "type": selectedItem },
+                            success: function (data) {
+                                ddlCategoryItems.html('');
+                                ddlCategoryItems.append($('<option></option>').val('0').html('All'));
+                                $.each(data, function (id, option) {
+                                    ddlCategoryItems.append($('<option></option>').val(option.Value).html(option.Name));
+                                });
+                                versionsProgress.hide();
+                            },
+                            error: function (xhr, ajaxOptions, thrownError) {
+                                alert('Failed to retrieve versions.');
+                                versionsProgress.hide();
+                            }
+                        });
+                    });
+                });
+          });
+
     </script>
 }
