Fix Clinic To retrieve based on org clinic, add filter for top 10 referal and update report models

--- a/Klinik.Web/Views/Reports/Top10DiseasesReport.cshtml
+++ b/Klinik.Web/Views/Reports/Top10DiseasesReport.cshtml
@@ -26,7 +26,7 @@
                         <tr>
                             <th align="center">@Klinik.Resources.UIMessages.ICDCode</th>
                             <th align="center">@Klinik.Resources.UIMessages.ICDName</th>
-                            <th align="center">@Klinik.Resources.UIMessages.Category</th>
+                            <th align="center">@Model.Category</th>
                             <th align="center">@Klinik.Resources.UIMessages.Total</th>
                         </tr>
                     </thead>
