--- a/Klinik.Web/Views/Reports/Top10DiseasesReport.cshtml
+++ b/Klinik.Web/Views/Reports/Top10DiseasesReport.cshtml
@@ -13,54 +13,60 @@
     </ul>
 
     <!-- Tab panes -->
-    <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="first">
-            <header class="panel-heading">
-                <h5 class="panel-title">
-                    @Klinik.Resources.UIMessages.Top10DiseasesReport
-                </h5>
-            </header>
-            <div class="panel-body">
-                <table class="table-striped">
-                    <thead>
-                        <tr>
-                            <th align="center">@Klinik.Resources.UIMessages.ICDCode</th>
-                            <th align="center">@Klinik.Resources.UIMessages.ICDName</th>
-                            <th align="center">@Model.Category</th>
-                            <th align="center">@Klinik.Resources.UIMessages.Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.DiseaseDataReports)
-                        {
+    <form method="post" action="/Reports/GenerateOutput">
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active" id="first">
+                <header class="panel-heading">
+                    <h5 class="panel-title">
+                        @Klinik.Resources.UIMessages.Top10DiseasesReport
+                    </h5>
+                </header>
+                <div class="panel-body">
+                    <table class="table-striped">
+                        <thead>
                             <tr>
-                                <td width="15%">@item.ICDCode</td>
-                                <td width="45%">@item.ICDName </td>
-                                <td width="25%">@item.Category</td>
-                                <td width="15%">@item.Total</td>
+                                <th align="center">@Klinik.Resources.UIMessages.ICDCode</th>
+                                <th align="center">@Klinik.Resources.UIMessages.ICDName</th>
+                                <th align="center">@Model.Category</th>
+                                <th align="center">@Klinik.Resources.UIMessages.Total</th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
-                @*<div class="pager">
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.DiseaseDataReports)
+                            {
+                                <tr>
+                                    <td width="15%">@item.ICDCode</td>
+                                    <td width="45%">@item.ICDName </td>
+                                    <td width="25%">@item.Category</td>
+                                    <td width="15%">@item.Total</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    @*<div class="pager">
                         @Html.Pager(Model.PageSize, Model.PageNumber, Model.TotalRecord)
                     </div>*@
+                </div>
+                <div class="panel-footer">
+                    <button type="submit" class="btn btn-primary" name="btnGenerateExcel">@Klinik.Resources.UIMessages.ExportToExcel</button>
+                </div>
             </div>
-            <div class="panel-footer">
-                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.ExportToExcel</button>
+            <div role="tabpanel" class="tab-pane" id="second">
+                <div class="row">
+                    <div class="col-md-12"></div>
+                    @foreach (DotNet.Highcharts.Highcharts chart in Model.Charts)
+                    {
+                        <div>
+                            @(chart)
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-primary" name="btnGenerateImage">@Klinik.Resources.UIMessages.GenerateImage</button>
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-        <div role="tabpanel" class="tab-pane" id="second">
-            <div class="row">
-                <div class="col-md-12"></div>
-                @foreach (DotNet.Highcharts.Highcharts chart in Model.Charts)
-                {
-                    <div class="col-md-12 col-md-6">
-                        @(chart)
-                    </div>
-                }
-            </div>
-        </div>
-    </div>
+
+    </form>
 
 </div>
