--- a/Klinik.Web/Views/Cashier/Detail.cshtml
+++ b/Klinik.Web/Views/Cashier/Detail.cshtml
@@ -2,10 +2,16 @@
 @{
     ViewBag.Title = "Detail";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var list = (IEnumerable<Klinik.Entities.Cashier.CashierModel>)ViewBag.Detail;
+    var lab = list.Where(a => a.CategoryId == 1);
+    var service = list.Where(a => a.CategoryId == 2);
+    var product = list.Where(a => a.CategoryId == 3);
 }
 
 
-
+@section Styles{
+    <link href="~/Content/Custom/Custom.css" rel="stylesheet" />
+}
 <section class="panel">
     <header class="panel-heading">
         <div class="panel-actions">
@@ -23,14 +29,48 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in (IEnumerable<Klinik.Entities.Cashier.CashierModel>)ViewBag.Detail)
+                    @if (lab.Count() > 0)
                     {
                         <tr>
-                            <td>@item.ItemName</td>
-                            <td>@item.Price</td>
+                            <th class="caption-table headertable" colspan="2" style="text-align:center">Lab Item</th>
                         </tr>
+                        foreach (var item in lab)
+                        {
+                            <tr>
+                                <td>@item.ItemName</td>
+                                <td>@item.Price</td>
+                            </tr>
+                        }
                     }
-                </tbody>
+
+                    @if (service.Count() > 0)
+                    {
+                        <tr>
+                            <th class="caption-table headertable" colspan="2" style="text-align:center">Item Service</th>
+                        </tr>
+                        foreach (var item in service)
+                        {
+                            <tr>
+                                <td>@item.ItemName</td>
+                                <td>@item.Price</td>
+                            </tr>
+                        }
+                    }
+
+                    @if (product.Count() > 0)
+                    {
+                        <tr>
+                            <th class="caption-table headertable" colspan="2" style="text-align:center">Product Item</th>
+                        </tr>
+                        foreach (var item in product)
+                        {
+                            <tr>
+                                <td>@item.ItemName</td>
+                                <td>@item.Price</td>
+                            </tr>
+                        }
+                    }
+                    </tbody>
                 <tfoot>
                     <tr>
                         <td></td>
