--- a/Klinik.Web/Views/MasterData/OrganizationList.cshtml
+++ b/Klinik.Web/Views/MasterData/OrganizationList.cshtml
@@ -89,12 +89,13 @@
                 { "data": "Klinik", "name": "Klinik", "autoWidth": true },
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/OrgPrivilegeList?orgid=' + full.Id + '">@Klinik.Resources.UIMessages.SetPrivilege</a>'; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" title="Edit" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '"><i class="fa fa-pencil" aria-hidden="true"></i></a>' + " | <button class='btn btn-danger' title='Remove' onclick='Delete(" + full['Id'] + ")' ><i class='fa fa-trash' aria-hidden='true'></i></button>" + ' | <a class="btn btn-info" title="Set Privilege" href="/MappingMaster/OrgPrivilegeList?orgid=' + full.Id + '"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>'; }
                 }
 
 
             ]
         });
+
     });
     var _status, _message, _temp;
     var _arrMsg = [];
