Edit code List Surat Rujukan

--- a/Klinik.Web/Views/RealisasiSuratRujukan/ListSurat.cshtml
+++ b/Klinik.Web/Views/RealisasiSuratRujukan/ListSurat.cshtml
@@ -81,11 +81,13 @@
                 },
                 {
                     "targets": [2],
+                     "visible": false,
                     "searchable": false,
                     "orderable": false
                 },
                 {
                     "targets": [3],
+                     "visible": false,
                     "searchable": false,
                     "orderable": false
                 },
